// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`frodo idm schema object lifecycle (create type -> add property -> update property -> remove property -> delete type) "frodo idm schema object create -o alpha_frodoE2ETestWidget --title 'Frodo E2E Test Widget' -y": should create the new managed-object type 1`] = `""`;

exports[`frodo idm schema object lifecycle (create type -> add property -> update property -> remove property -> delete type) "frodo idm schema object create -o alpha_frodoE2ETestWidget --title 'Frodo E2E Test Widget' -y": should create the new managed-object type 2`] = `
"This creates the new managed object type "alpha_frodoE2ETestWidget".
✔ Created managed object type "alpha_frodoE2ETestWidget"."
`;

exports[`frodo idm schema object lifecycle (create type -> add property -> update property -> remove property -> delete type) "frodo idm schema object describe -o alpha_frodoE2ETestWidget --json": should describe the new type's own metadata 1`] = `
"{
  "$schema": "http://json-schema.org/draft-04/schema#",
  "title": "Frodo E2E Test Widget",
  "mat-icon": "widgets",
  "type": "object",
  "properties": {
    "_id": {
      "type": "string",
      "title": "Id"
    }
  },
  "order": [
    "_id"
  ],
  "required": [],
  "resourceCollection": "managed/alpha_frodoE2ETestWidget"
}"
`;

exports[`frodo idm schema object lifecycle (create type -> add property -> update property -> remove property -> delete type) "frodo idm schema object describe -o alpha_frodoE2ETestWidget --json": should describe the new type's own metadata 2`] = `""`;

exports[`frodo idm schema object lifecycle (create type -> add property -> update property -> remove property -> delete type) "frodo idm schema object describe -o alpha_frodoE2ETestWidget": should reflect the updated title 1`] = `
"Frodo E2E Test Widget (Updated) (alpha_frodoE2ETestWidget)

icon: widgets

Properties

Name│Title│Type  │NUL│REQ│SRH│UED│VIW
_id │Id   │string│no │no │no │no │yes

NUL=Nullable, REQ=Required, SRH=Searchable, UED=User Editable, VIW=Viewable"
`;

exports[`frodo idm schema object lifecycle (create type -> add property -> update property -> remove property -> delete type) "frodo idm schema object describe -o alpha_frodoE2ETestWidget": should reflect the updated title 2`] = `""`;

exports[`frodo idm schema object lifecycle (create type -> add property -> update property -> remove property -> delete type) "frodo idm schema object update -o alpha_frodoE2ETestWidget --title 'Frodo E2E Test Widget (Updated)' -y": should update the type's title 1`] = `""`;

exports[`frodo idm schema object lifecycle (create type -> add property -> update property -> remove property -> delete type) "frodo idm schema object update -o alpha_frodoE2ETestWidget --title 'Frodo E2E Test Widget (Updated)' -y": should update the type's title 2`] = `
"This updates the managed object type "alpha_frodoE2ETestWidget".
Current:
{
  "title": "Frodo E2E Test Widget",
  "icon": "widgets"
}
Proposed:
{
  "title": "Frodo E2E Test Widget (Updated)",
  "icon": "widgets"
}
✔ Updated managed object type "alpha_frodoE2ETestWidget"."
`;

exports[`frodo idm schema object lifecycle (create type -> add property -> update property -> remove property -> delete type) "frodo idm schema property create -o alpha_frodoE2ETestWidget -p widgetSize --property-type number --title 'Widget Size' --user-editable": should add a new schema property 1`] = `""`;

exports[`frodo idm schema object lifecycle (create type -> add property -> update property -> remove property -> delete type) "frodo idm schema property create -o alpha_frodoE2ETestWidget -p widgetSize --property-type number --title 'Widget Size' --user-editable": should add a new schema property 2`] = `"✔ Created property "widgetSize" on "alpha_frodoE2ETestWidget"."`;

exports[`frodo idm schema object lifecycle (create type -> add property -> update property -> remove property -> delete type) "frodo idm schema property delete -o alpha_frodoE2ETestWidget -p widgetSize -y": should remove the property 1`] = `""`;

exports[`frodo idm schema object lifecycle (create type -> add property -> update property -> remove property -> delete type) "frodo idm schema property delete -o alpha_frodoE2ETestWidget -p widgetSize -y": should remove the property 2`] = `
"This permanently deletes property "widgetSize" from managed object type "alpha_frodoE2ETestWidget".
✔ Deleted property "widgetSize" from "alpha_frodoE2ETestWidget"."
`;

exports[`frodo idm schema object lifecycle (create type -> add property -> update property -> remove property -> delete type) "frodo idm schema property describe -o alpha_frodoE2ETestWidget -p widgetSize --json": should reflect the updated property definition 1`] = `
"{
  "type": "number",
  "title": "Widget Size",
  "description": "The widget's size, updated by the lifecycle e2e test to add this description and make the property searchable.",
  "viewable": true,
  "userEditable": true,
  "returnByDefault": false,
  "searchable": true
}"
`;

exports[`frodo idm schema object lifecycle (create type -> add property -> update property -> remove property -> delete type) "frodo idm schema property describe -o alpha_frodoE2ETestWidget -p widgetSize --json": should reflect the updated property definition 2`] = `""`;

exports[`frodo idm schema object lifecycle (create type -> add property -> update property -> remove property -> delete type) "frodo idm schema property describe -o alpha_frodoE2ETestWidget -p widgetSize": should describe the new property 1`] = `
"Widget Size (widgetSize)

type           │number
viewable       │true  
userEditable   │true  
returnByDefault│false"
`;

exports[`frodo idm schema object lifecycle (create type -> add property -> update property -> remove property -> delete type) "frodo idm schema property describe -o alpha_frodoE2ETestWidget -p widgetSize": should describe the new property 2`] = `""`;

exports[`frodo idm schema object lifecycle (create type -> add property -> update property -> remove property -> delete type) "frodo idm schema property list -o alpha_frodoE2ETestWidget --json": should fail, the type no longer exists 1`] = `
"Error reading managed alpha_frodoE2ETestWidget schema
  Network error:
    URL: https://openam-frodo-dev.forgeblocks.com/openidm/schema/managed/alpha_frodoE2ETestWidget
    Status: 404
    Code: ERR_BAD_REQUEST
    Reason: Not Found
    Message: No schema found for managed/alpha_frodoE2ETestWidget"
`;

exports[`frodo idm schema object lifecycle (create type -> add property -> update property -> remove property -> delete type) "frodo idm schema property list -o alpha_frodoE2ETestWidget": should be back to only the base properties 1`] = `"_id"`;

exports[`frodo idm schema object lifecycle (create type -> add property -> update property -> remove property -> delete type) "frodo idm schema property list -o alpha_frodoE2ETestWidget": should be back to only the base properties 2`] = `""`;

exports[`frodo idm schema object lifecycle (create type -> add property -> update property -> remove property -> delete type) "frodo idm schema property list -o alpha_frodoE2ETestWidget": should list the new type's base properties 1`] = `"_id"`;

exports[`frodo idm schema object lifecycle (create type -> add property -> update property -> remove property -> delete type) "frodo idm schema property list -o alpha_frodoE2ETestWidget": should list the new type's base properties 2`] = `""`;

exports[`frodo idm schema object lifecycle (create type -> add property -> update property -> remove property -> delete type) "frodo idm schema property update -o alpha_frodoE2ETestWidget -p widgetSize --description '...' --searchable -y": should update the property, previewing current vs. proposed 1`] = `""`;

exports[`frodo idm schema object lifecycle (create type -> add property -> update property -> remove property -> delete type) "frodo idm schema property update -o alpha_frodoE2ETestWidget -p widgetSize --description '...' --searchable -y": should update the property, previewing current vs. proposed 2`] = `
"Current:
{
  "type": "number",
  "title": "Widget Size",
  "viewable": true,
  "userEditable": true,
  "returnByDefault": false
}
Proposed:
{
  "type": "number",
  "title": "Widget Size",
  "description": "The widget's size, updated by the lifecycle e2e test to add this description and make the property searchable.",
  "viewable": true,
  "userEditable": true,
  "returnByDefault": false,
  "searchable": true
}
✔ Updated property "widgetSize" on "alpha_frodoE2ETestWidget"."
`;
